# planning

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CI_entrypoint.sh  CI_entrypoint_pp_open.sh  CI_entrypoint_simulation.sh  CMakeLists.txt  Dockerfile  Jekinsfile  Jenkinsfile  Makefile  README.md  format.py  sim_trigger.py
ad_common/: CMakeLists.txt  run_batch_test.py
ad_common/decrypt_encrypt/: E541_decrypt_encrypt.cc  E541_decrypt_encrypt.h  M32T_decrypt_encrypt.cc  M32T_decrypt_encrypt.h
ad_common/hdmap/: hdmap.cc  hdmap.h  hdmap_impl.cc  hdmap_impl.h  hdmap_lane_boundary_info.cc  hdmap_lane_boundary_info.h  hdmap_lane_info.cc  hdmap_lane_info.h  hdmap_utils.cc  hdmap_utils.h
ad_common/math/: aabox2d.cc  aabox2d.h  aaboxkdtree2d.h  box2d.cc  box2d.h  line_segment2d.cc  line_segment2d.h  linear_interpolation.cc  linear_interpolation.h  math_utils.cc  math_utils.h  polygon2d.cc  polygon2d.h  vec2d.cc  vec2d.h
ad_common/sdmap/: README.md  sdmap.cpp  sdmap.h  sdmap_utils.cpp  sdmap_utils.h
ad_common/sdpromap/: sdpromap.cpp  sdpromap.h
ad_common/test/: E541_test_decrypt_encrypt.cc  M32T_test_decrypt_encrypt.cc  hdmap_impl_test.cc  main.cpp  sdmap_test.cpp  sdpromap_test.cpp
ad_common/test_data/: road_map.pb.txt  sdmap_data.txt  sdpromap_data.txt
interface/: .clang-format  .gitignore  CHANGELOG.MD  CMakeLists.txt  Makefile  README.md
interface/doc/: README.md  绘图1.eddx  辅助标示牌类型枚举.docx
interface/mdc/: generate_config.sh
interface/rosmsg/: README.md
interface/src/: interface_description.md  manifest.yaml
interface/test/: CMakeLists.txt  ifly_unit.h
interface/type_convert/: README.md  base_convert.h  cstruct_gen_convert_function_cpp.py  cstruct_to_rosmsg.py  direct_topic_convert.md  ros_convert_generator.py  single_topic_convert.md  topic_description_parser.py
jupyter_pybind/: CMakeLists.txt
jupyter_pybind/component/: CMakeLists.txt
jupyter_pybind/motion_planning/: CMakeLists.txt
jupyter_pybind/notebooks/: README.md
jupyter_pybind/notebooks_scc/: README.md
jupyter_pybind/scripts/: proto_gen.py
jupyter_pybind/src/: apa_parallel_simulation_hybrid_astar.cc  apa_replay_simulation_hybrid_astar.cc  apa_simulation_pybind.cc  apa_speed_optimizer_pybind.cc  astar_parallel_pybind.cc  astar_parallel_pybind_replay.cc  collision_detection_pybind.cc  diag_slot_planning_pybind.cc  dp_road_pybind.cc  dp_speed_optimizer_pybind.cc  dubins_lib_pybind.cc  gap_selector_pybind.cc  geometry_math_validation_pybind.cc  headin_planning_pybind.cc  hybrid_astar_out_path_generator_pybind.cc  hybrid_astar_path_generator_pybind.cc  jerk_limited_trajectory_pybind.cc  lateral_motion_planning_pybind.cc  lateral_path_optimizer_pybind.cc  longitudinal_motion_planning_pybind.cc  meb_box_collision_pybind.cc  optimizer_apa_simulation_pybind.cc  parallel_planning_out_pybind.cc  parallel_planning_pybind.cc  parallel_preparing_plan_pybind.cc  perpendicular_park_out_pybind.cc  perpendicular_planning_pybind.cc  perpendicular_slant_tail_in_pybind.cc  perpendicular_slant_tail_in_with_json_pybind.cc  prepare_plan_pybind.cc  quartic_curve_sample_pybind.cc  realtime_lateral_motion_planning_pybind.cc  realtime_lon_behavior_planner_pybind.cc  realtime_longitudinal_motion_planning_pybind.cc  reference_path_smooth_pybind.cc  rss_model_pybind.cc  scc_lon_motion_planning_pybind.cc  scc_lon_motion_planning_pybind_v3.cc  serialize_utils.h  slant_planning_pybind.cc  (+6 more)
proto/: CMakeLists.txt  apa_debug_data.proto  apa_sim_config.proto  apa_speed_smoother_config.proto  basic_types.proto  common.proto  dp_road_graph.proto  ego_state_info.proto  ehr_sdmap.proto  environment_model_debug_info.proto  fem_pos_deviation_smoother_config.proto  gap_selector.proto  generated_refline.proto  hpp_lateral_obstacle_decider_result.proto  hpp_speed_limit_decider_debug.proto  hybrid_ara_star.proto  iterative_anchoring_config.proto  joint_decision_planner.proto  joint_motion_planner.proto  lane_borrow_decider.proto  lat_behavior_common.proto  lateral_behavior_planner.proto  lateral_motion_planner.proto  lateral_offset_decider_info.proto  lateral_path_optimizer.proto  lon_behavior_planner.proto  lon_target_maker.proto  longitudinal_motion_planner.proto  planning_debug_info.proto  potential_dangerous_agent_decider_info.proto  real_time_lon_behavior_planner.proto  reference_path_smooth.proto  scene_type_config.proto  simlulation_param.proto  slot_management_info.proto  spatio_temporal_union_dp_input.proto  spatio_temporal_union_plan.proto  st_graph.proto  st_graph_searcher.proto  st_search_decider.proto  (+6 more)
src/: CMakeLists.txt  environmental_model_manager.cc  environmental_model_manager.h  environmental_model_module.cc  environmental_model_module.h  general_planner.cc  general_planner.h  general_planner_module.cc  general_planner_module.h  general_planning.cc  general_planning.h  planning_component.cc  planning_component.h
src/adapter/: CMakeLists.txt  planning_adapter.cc
src/apa_simulation/: CMakeLists.txt  apa_simulation_component.cc  apa_simulation_component.h
src/common/: CMakeLists.txt  Platform_Types.h  arena.cc  arena.h  class_name.cc  class_name.h  debug_info_log.h  euler_angles_zxy.h  ifly_time.h  line_segmentf32.cc  line_segmentf32.h  log.h  log_glog.cc  log_glog.h  macro.h  math_utils.h  minheap.h  park_hmi_state.h  path_point.h  planning_gflags.cc  planning_gflags.h  pose2d.cc  pose2d.h  quaternion.h  registry.h  transform2d.cc  transform2d.h  utils.cc  utils.h  utils_math.h  vec2d.cc  vec2d.h  vecf32.cc  vecf32.h
src/framework/: CMakeLists.txt  frame.cc  frame.h  module.cc  module.h  plan_data.cc  plan_data.h  plan_interface_base.h  planning_def.h  scheduler.cc  scheduler.h  session.cc  session.h
src/modules/: CMakeLists.txt  apa_module.cc  apa_module.h  environmental_model_manager.cc  environmental_model_manager.h  environmental_model_module.cc  environmental_model_module.h  general_planner.cc  general_planner.h  general_planner_module.cc  general_planner_module.h  general_planning.cc  general_planning.h  (+9 more)
test/: CMakeLists.txt  main_test.cc  package.xml  planning_main_test.cc  planning_main_test.h
(+3970 files in other folders)
