<?xml version="1.0"?>
<package>
  <name>planning_component</name>
  <version>1.11.0</version>
  <description>The planning package</description>
  <maintainer email="clren@iflytek.com">xfwang23</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <license>Apache 2</license>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <export>
  </export>
</package>